--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -5,11 +5,12 @@
     <title>Главная</title>
 </head>
 <body>
+<h1>Список статей:</h1>
 
 {% if articles %}
     <ul>
     {% for article in articles %}
-        <li><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a></li>
+        <li><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a> by <a href="{% url 'author_detail' article.author.id %}">{{ article.author.name }}</a></li>
     {% endfor %}
     </ul>
 {% endif %}
