--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Главная</title>
-</head>
-<body>
+{% extends "blog/base.html" %}
+
+{% block content %}
 <h1>Список статей:</h1>
 
 {% if articles %}
@@ -14,6 +10,4 @@
     {% endfor %}
     </ul>
 {% endif %}
-
-</body>
-</html>
+{% endblock %}
